Make compilation working with maven and java17 after git rebase.